<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.chip.ChipGroup
        style="@style/ChipGroupStyle">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipDate"
            android:text="@string/today"
            style="@style/DateChipStyle"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipCompleted"
            android:text="@string/completed"
            style="@style/ChipStyle"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipCancelled"
            android:text="@string/cancelled"
            style="@style/ChipStyle"/>

    </com.google.android.material.chip.ChipGroup>

    <ImageView
        style="@style/FilterImageStyle" />

</RelativeLayout>