<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.zennjero.kook.app.presentation.auth.RoleSelectionActivity">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/topImageMargin"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight=".5">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    style="@style/TagLineStyle"
                    android:layout_marginStart="10dp"
                    android:text="@string/are_you_ready_to_order_some_zenlicious_homemade_food" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buyerLoginbtn"
                    style="@style/LoginOptionButtonStyle"
                    android:text="@string/buyer_login" />

            </LinearLayout>

            <ImageView
                style="@style/LogeerImageStyle"
                android:layout_margin="10dp"
                android:src="@drawable/ic_buyer" />

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            style="@style/CustomCardCorners"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/cardTopMargin"
            app:cardBackgroundColor="@color/backgroundColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_weight=".5">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/llcardmargin"
                android:orientation="horizontal">

                <ImageView
                    style="@style/LogeerImageStyle"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_cook" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TagLineStyle"
                        android:layout_marginStart="25dp"
                        android:text="@string/take_your_business_to_a_next_level" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/kookLoginbtn"
                        style="@style/LoginOptionButtonStyle"
                        android:text="@string/kook_login" />

                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>

