<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/item_title"
            android:layout_alignParentStart="true"
            style="@style/DishTitleTextStyle"
            tools:text="Butter Chicken"/>
        <TextView
            android:id="@+id/item_price"
            android:layout_alignParentEnd="true"
            style="@style/DishTitleTextStyle"
            tools:text="Rs.150"/>
    </RelativeLayout>


    <TextView
        android:id="@+id/item_desc"
        style="@style/SubTextStyle"
        android:layout_below="@id/rl1"
        tools:text="@tools:sample/lorem/random" />
    <LinearLayout
        android:id="@+id/ll2"
        android:layout_below="@+id/item_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/SubTextStyle"
            android:text="@string/quantity"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:id="@+id/item_quantity"
            style="@style/SubTextStyle"
            tools:text="5"
            android:layout_marginStart="10dp" />
        <TextView
            style="@style/SubTextStyle"
            android:text="@string/serving"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:id="@+id/item_serving"
            style="@style/SubTextStyle"
            tools:text="2"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <com.google.android.material.chip.ChipGroup
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/timeChipGroup"
        android:layout_below="@+id/ll2" />

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_below="@+id/timeChipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/SubTextStyle"
            android:text="@string/closing_time"
            android:layout_marginEnd="2dp"/>

        <TextView
            style="@style/SubTextStyle"
            tools:text="4:00pm"
            android:layout_marginStart="2dp"/>

    </LinearLayout>

    <View
        android:layout_below="@id/ll3"
        style="@style/DividerStyle"/>


</RelativeLayout>