<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.zennjero.kook.app.presentation.auth.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/topLayoutMargin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/LogeerImageStyle"
                    app:imageType="@{viewModel.loginType}" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        style="@style/WelcomeTextStyle"
                        android:text="@string/welcome_back" />

                    <TextView
                        style="@style/TagLineStyle"
                        app:textType="@{viewModel.loginType}" />
                </LinearLayout>


            </LinearLayout>

            <EditText
                style="@style/LoginEditTextStyle"
                android:editable="false"
                android:enabled="false"
                android:inputType="none"
                android:text="@{viewModel.phoneNumber}"
                tools:ignore="TextFields" />

            <EditText
                style="@style/LoginEditTextStyle"
                android:autofillHints="no"
                android:hint="@string/otp"
                android:inputType="number"
                android:maxLength="6"
                android:text="@={viewModel.otp}" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/loginBtn"
                    style="@style/LoginButtonsStyle"
                    android:text="@string/login" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@style/ProgressBarStyle" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>


</layout>